--- a/config.json
+++ b/config.json
@@ -39,6 +39,7 @@
     {
         "app":"international",
         "baseAppVersion": [
+	    "1.0.0",
             "2.5.0",
             "2.5.1",
             "2.6.0",
@@ -59,7 +60,7 @@
             "8."
         ],
         "targetAppVersion": "2.7.1",
-        "targetAppUrl": "https://localhost/files/update.zip",
+        "targetAppUrl": "http://tuziyuedu.com:8080/VIPKID_WIN32_1.0.0.zip",
         "targetAppUrlBackUp": "2.6.2.url.backup",
         "targetNotes": "升级给宝石哦",
         "targetPubDate": "217-08-08",
