--- a/config.json
+++ b/config.json
@@ -8,18 +8,16 @@
             "2.7.0"
         ],
         "baseOs": [
-            "darwin"
+            "mac"
         ],
         "baseChannel": [
             "360",
             "guanwang"
         ],
         "baseOsversion": [
-            "16.",
-            "17."
         ],
         "targetAppVersion": "2.7.1",
-        "targetAppUrl": "http://localhost/files/update_mac.zip",
+        "targetAppUrl": "http://tuziyuedu.com:8080/updates.zip",
         "targetAppUrlBackUp": "2.6.2.url.backup",
         "targetNotes": "升级给宝石哦",
         "targetPubDate": "217-08-08",
