config local file

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 [
     {
-        "app":"student",
+        "app":"pc_student",
         "baseAppVersion": [
             "2.5.0",
             "2.5.1",
@@ -21,7 +21,7 @@
         "targetAppUrlBackUp": "2.6.2.url.backup",
         "targetNotes": "升级给宝石哦",
         "targetPubDate": "217-08-08",
-        "targetStrategy": "promote",
+        "targetStrategy": "promot",
         "whiteUserList": [
             12
         ],
@@ -58,7 +58,7 @@
             "8."
         ],
         "targetAppVersion": "2.7.1",
-        "targetAppUrl": "http://tuziyuedu.com:8080/updates.zip",
+        "targetAppUrl": "http://localhost/files/271_diff.zip",
         "targetAppUrlBackUp": "2.6.2.url.backup",
         "targetNotes": "升级给宝石哦",
         "targetPubDate": "217-08-08",
