--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "set NODE_ENV=dev && node-dev index.js",
-    "product": "set NODE_ENV=product && node index.js"
+    "product": "set NODE_ENV=production && node index.js"
   },
   "author": "",
   "license": "ISC",
